<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General App Strings -->
    <string name="app_name">QARK</string>
    <string name="nav_title_file_browser">File Browser</string>
    <string name="nav_title_intent_sniffer">Intent Sniffer</string>
    <string name="nav_title_exported_components">Exported Components</string>
    <string name="nav_title_tap_jacking">Tap Jacking</string>
    <string name="nav_title_custom_intent">Send Custom Intent</string>
    <string name="nav_title_web_view_tests">WebView Tests</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="button_submit">Submit</string>
    <string name="action_new_intent">Add a New Intent</string>
    <string name="title_activity_exploit_exported_result">Exploit Result</string>
    <string name="title_activity_broadcast_intent_sniffer">Intent Sniffer</string>
    <string name="title_activity_intent_sender">Intent Sender</string>
    <string name="noIntent">No intents available to exploit</string>
    <string name="noExportedActivity">No exported activities available to exploit</string>
    <string name="noExportedComponents">No exported components found.</string>
    <string name="tap_jacking_text">This application demonstrates TapJacking.</string>
    <string name="title_activity_choose_intent_use_case">Choose Intent Use Case</string>

    <!-- Create New Intent -->
    <string name="action_new_custom_intent">Create a New Custom Intent</string>
    <string name="activity_create_custom_intent_title">Create a Custom Intent</string>
    <string name="send_intent_button">Send Intent</string>
    <string name="activity_create_new_intent_use_case">Create Intent to Perform:</string>
    <string name="activity_create_new_intent_action">Intent Action:</string>
    <string name="activity_create_new_intent_data">Intent Data (Optional):</string>
    <string name="activity_create_new_intent_data_ex">Example: http://www.example.com/image.png or content://contacts/people/1</string>
    <string name="activity_create_new_intent_type">Intent Type:</string>
    <string name="activity_create_new_intent_category">Intent Category:</string>
    <string name="activity_create_new_intent_component">Component Name:</string>
    <string name="activity_create_new_intent_component_ex">Example: com.example.ExampleActivity</string>
    <string name="activity_create_new_intent_component_package_name">Target App Package Name</string>
    <string name="activity_create_new_intent_extras">Intent Extras:</string>
    <string name="activity_create_new_intent_flags">Intent Flags:</string>
    <string name="activity_create_custom_intent_next_button">Next</string>
    <string name="intent_extras_key">Key:</string>
    <string name="intent_extras_value">Value:</string>
    <string name="title_activity_create_custom_intent">Create Custom Intent</string>

    <!-- Accessibility Improvements -->
    <string name="nav_header_image_description">QARK Logo Image in Navigation Header</string>
    <string name="webview_content_description">This is a web content view</string>
    <string name="content_description_submit_button">Submit your input</string>
    <string name="no_tests_available_description">No tests available to display</string>

    <!-- Error Messages -->
    <string name="error_no_intent">Error: No intent provided.</string>
    <string name="error_invalid_data">Error: Invalid data format.</string>

</resources>
